--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h2 class="intro-text">Hi, I'm Jacob.</h2>
                 <h3 class="intro-text">I create complete and comprehensive websites; from the server to the design.</h3>
                 <h4>Let's work together to build a great and influential web application!</h4>
-                <img class="about-me" src="../JSchmidtCode.github.io/images/about-me-photo.jpg" alt="photo of me" />
+                <img class="about-me" src="/images/about-me-photo.jpg" alt="photo of me" />
                 <button>Work With Me</button>
             </section>
         </div>
@@ -25,13 +25,13 @@
             <h1>Ready to get started? Here are some of my finished web pages: </h1>
             <div class="showcase-media">
                 <div class="monitor">
-                    <img src="../JSchmidtCode.github.io/images/web-browser-image.png">
+                    <img src="/images/web-browser-image.png">
                     <div class="monitor-content">
 
                     </div>
                 </div>
                 <div class="phone">
-                    <img src="../JSchmidtCode.github.io/images/phone-image.png">
+                    <img src="/images/phone-image.png">
                     <div class="phone-content">
 
                     </div>
